--- a/server/package.json
+++ b/server/package.json
@@ -37,7 +37,8 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
-    "socket.io": "^4.4.1"
+    "socket.io": "^4.4.1",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
