--- a/client/package.json
+++ b/client/package.json
@@ -5,13 +5,12 @@
 	"dependencies": {
 		"@reduxjs/toolkit": "^1.8.0",
 		"@testing-library/jest-dom": "^5.16.1",
-		"@testing-library/react": "^12.1.2",
 		"@testing-library/user-event": "^13.5.0",
 		"@tippyjs/react": "^4.0.0",
-		"@types/jest": "^27.4.0",
 		"@types/node": "^16.11.22",
 		"@types/react": "^17.0.38",
 		"@types/react-dom": "^17.0.11",
+		"@types/redux-mock-store": "^1.0.3",
 		"axios": "^0.26.1",
 		"classnames": "^2.3.1",
 		"react": "^17.0.2",
@@ -24,6 +23,7 @@
 		"react-router": "^6.2.1",
 		"react-router-dom": "^6.2.1",
 		"react-scripts": "5.0.0",
+		"redux-mock-store": "^1.5.4",
 		"sass": "^1.49.9",
 		"socket.io-client": "^4.4.1",
 		"typescript": "^4.5.5",
@@ -54,7 +54,10 @@
 		]
 	},
 	"devDependencies": {
+		"@testing-library/react": "^12.1.2",
+		"@types/jest": "^28.1.4",
 		"autoprefixer": "^10.4.2",
+		"jest": "^28.1.2",
 		"postcss": "^8.4.6",
 		"tailwindcss": "^3.0.18"
 	}
