--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
 		"@types/redux-mock-store": "^1.0.3",
 		"axios": "^0.26.1",
 		"classnames": "^2.3.1",
+		"lodash": "^4.17.21",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-hook-form": "^7.28.1",
@@ -56,6 +57,7 @@
 	"devDependencies": {
 		"@testing-library/react": "^12.1.2",
 		"@types/jest": "^28.1.4",
+		"@types/lodash": "^4.14.184",
 		"autoprefixer": "^10.4.2",
 		"jest": "^28.1.2",
 		"postcss": "^8.4.6",
