--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
 		"@testing-library/jest-dom": "^5.16.1",
 		"@testing-library/user-event": "^13.5.0",
 		"@tippyjs/react": "^4.0.0",
+		"@tolgee/react": "^4.9.2",
 		"@types/node": "^16.11.22",
 		"@types/react": "^17.0.38",
 		"@types/react-dom": "^17.0.11",
