--- a/client/package.json
+++ b/client/package.json
@@ -60,6 +60,7 @@
 		"@types/jest": "^28.1.4",
 		"@types/lodash": "^4.14.184",
 		"autoprefixer": "^10.4.2",
+		"cypress": "^12.2.0",
 		"jest": "^28.1.2",
 		"postcss": "^8.4.6",
 		"tailwindcss": "^3.0.18"
