--- a/server/package.json
+++ b/server/package.json
@@ -69,7 +69,9 @@
     "typescript": "^4.3.5",
     "yup": "^0.32.11"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@types/mongoose": "^5.11.97"
+  },
   "jest": {
     "moduleFileExtensions": [
       "js",
