--- a/client/package.json
+++ b/client/package.json
@@ -1,68 +1,69 @@
 {
-	"name": "client",
-	"version": "0.1.0",
-	"private": true,
-	"dependencies": {
-		"@reduxjs/toolkit": "^1.8.0",
-		"@testing-library/jest-dom": "^5.16.1",
-		"@testing-library/user-event": "^13.5.0",
-		"@tippyjs/react": "^4.0.0",
-		"@tolgee/react": "^4.9.2",
-		"@types/node": "^16.11.22",
-		"@types/react": "^17.0.38",
-		"@types/react-dom": "^17.0.11",
-		"@types/redux-mock-store": "^1.0.3",
-		"axios": "^0.26.1",
-		"classnames": "^2.3.1",
-		"lodash": "^4.17.21",
-		"react": "^17.0.2",
-		"react-dom": "^17.0.2",
-		"react-hook-form": "^7.28.1",
-		"react-icons": "^4.3.1",
-		"react-loading-skeleton": "^3.0.3",
-		"react-query": "^3.34.19",
-		"react-redux": "^7.2.6",
-		"react-router": "^6.2.1",
-		"react-router-dom": "^6.2.1",
-		"react-scripts": "5.0.0",
-		"redux-mock-store": "^1.5.4",
-		"sass": "^1.49.9",
-		"socket.io-client": "^4.4.1",
-		"typescript": "^4.5.5",
-		"web-vitals": "^2.1.4"
-	},
-	"scripts": {
-		"start": "react-scripts start",
-		"build": "react-scripts build",
-		"test": "react-scripts test",
-		"eject": "react-scripts eject"
-	},
-	"eslintConfig": {
-		"extends": [
-			"react-app",
-			"react-app/jest"
-		]
-	},
-	"browserslist": {
-		"production": [
-			">0.2%",
-			"not dead",
-			"not op_mini all"
-		],
-		"development": [
-			"last 1 chrome version",
-			"last 1 firefox version",
-			"last 1 safari version"
-		]
-	},
-	"devDependencies": {
-		"@testing-library/react": "^12.1.2",
-		"@types/jest": "^28.1.4",
-		"@types/lodash": "^4.14.184",
-		"autoprefixer": "^10.4.2",
-		"cypress": "^12.2.0",
-		"jest": "^28.1.2",
-		"postcss": "^8.4.6",
-		"tailwindcss": "^3.0.18"
-	}
+  "name": "client",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "@reduxjs/toolkit": "^1.8.0",
+    "@testing-library/jest-dom": "^5.16.1",
+    "@testing-library/user-event": "^13.5.0",
+    "@tippyjs/react": "^4.0.0",
+    "@tolgee/react": "^4.9.2",
+    "@types/node": "^16.11.22",
+    "@types/react": "^17.0.38",
+    "@types/react-dom": "^17.0.11",
+    "@types/redux-mock-store": "^1.0.3",
+    "axios": "^0.26.1",
+    "classnames": "^2.3.1",
+    "lodash": "^4.17.21",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-hook-form": "^7.28.1",
+    "react-icons": "^4.3.1",
+    "react-loading-skeleton": "^3.0.3",
+    "react-query": "^3.34.19",
+    "react-redux": "^7.2.6",
+    "react-router": "^6.2.1",
+    "react-router-dom": "^6.2.1",
+    "react-scripts": "5.0.0",
+    "redux-mock-store": "^1.5.4",
+    "sass": "^1.49.9",
+    "socket.io-client": "^4.4.1",
+    "typescript": "^4.5.5",
+    "web-vitals": "^2.1.4"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "cypress:open": "cypress open"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "devDependencies": {
+    "@testing-library/react": "^12.1.2",
+    "@types/jest": "^28.1.4",
+    "@types/lodash": "^4.14.184",
+    "autoprefixer": "^10.4.2",
+    "cypress": "^12.2.0",
+    "jest": "^28.1.2",
+    "postcss": "^8.4.6",
+    "tailwindcss": "^3.0.18"
+  }
 }
